// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberInput component renders lg size 1`] = `
@media  {
  .c-dhzjXW {
    display: flex;
  }

  .c-jVLVTy {
    z-index: 1;
  }

  .c-oUmPa {
    align-items: center;
    -webkit-appearance: none;
    appearance: none;
    background: white;
    border: unset;
    border-radius: var(--radii-0);
    box-sizing: border-box;
    cursor: pointer;
    display: flex;
    flex-shrink: 0;
    justify-content: center;
    padding: unset;
    transition: all 100ms ease-out;
  }

  .c-oUmPa[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-hMRxhp {
    display: inline-block;
    fill: none;
    flex-shrink: 0;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    vertical-align: middle;
  }

  .c-euKflc {
    border-color: var(--colors-grey800) !important;
    z-index: 1;
    height: 100% !important;
  }

  .c-euKflc:hover {
    background: var(--colors-grey100);
  }

  .c-euKflc:hover svg {
    color: var(--colors-grey800);
  }

  .c-euKflc svg {
    color: var(--colors-grey700);
  }

  .c-euKflc:active {
    background: var(--colors-grey200);
  }

  .c-euKflc:active svg {
    color: var(--colors-grey900);
  }

  .c-euKflc:disabled {
    opacity: 0.3;
    pointer-events: none;
  }

  .c-hkdxUu {
    background-color: var(--colors-grey900);
    border-radius: var(--radii-0);
    box-shadow: var(--shadows-0);
    color: white;
    font-family: var(--fonts-body);
    font-size: var(--fontSizes-sm);
    line-height: 1.5;
    white-space: normal;
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    padding-top: var(--space-2);
    padding-bottom: var(--space-2);
    z-index: 10;
  }

@media (prefers-reduced-motion: no-preference) {
    .c-hkdxUu {
      animation-duration: 75ms;
      animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
      will-change: transform, opacity;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hkdxUu[data-state="delayed-open"][data-side="top"] {
      animation-name: k-ftcNPK;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hkdxUu[data-state="delayed-open"][data-side="right"] {
      animation-name: k-hbaHED;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hkdxUu[data-state="delayed-open"][data-side="bottom"] {
      animation-name: k-daNevH;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hkdxUu[data-state="delayed-open"][data-side="left"] {
      animation-name: k-fvyGIa;
    }
}

  .c-kOvGWL {
    background: white;
    color: var(--colors-grey1000);
    border: 1px solid var(--colors-grey800);
    border-radius: var(--radii-0);
    transition: background 100ms ease-out, borderColor 100ms ease-out;
    width: 100%;
  }

  .c-kOvGWL:focus-within {
    border-color: var(--colors-blue800);
  }

  .c-ctivzP {
    margin: 0;
  }

  .c-ctivzP > .c-ctivzP:before,
  .c-ctivzP > .c-ctivzP:after {
    display: none;
  }

  .c-foJWJd {
    -webkit-appearance: none;
    appearance: none;
    border: none;
    background: none;
    background-image: none;
    background-color: transparent;
    box-shadow: none;
    box-sizing: border-box;
  }

  .c-foJWJd:focus {
    outline: none;
  }

  .c-foJWJd {
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    height: 100%;
    width: 100%;
  }

  .c-euCLOJ {
    fill: var(--colors-grey900);
  }

  [data-align="end"] .c-euCLOJ {
    margin-right: var(--space-2);
  }

  [data-align="start"] .c-euCLOJ {
    margin-left: var(--space-2);
  }
}

@media  {
  .c-oUmPa-PrXKS-size-md {
    height: var(--sizes-4);
    width: var(--sizes-4);
  }

  .c-hMRxhp-dMrjnF-size-md {
    height: var(--sizes-2);
    width: var(--sizes-2);
    stroke-width: 1.75;
  }

  .c-hkdxUu-gWQnqe-size-md {
    max-width: 250px;
  }

  .c-kOvGWL-dNqCDY-size-md {
    height: var(--sizes-4);
  }

  .c-ctivzP-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-ctivzP-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-ctivzP-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-ctivzP-eMzMJc-weight-normal {
    font-weight: 400;
  }

  .c-ctivzP-cyRcZm-family-body {
    font-family: var(--fonts-body);
  }

  .c-kOvGWL-hSbHZR-size-lg {
    height: var(--sizes-5);
  }
}

@media  {
  .c-oUmPa-fboUUB-cv {
    border: 1px solid;
    border-color: currentColor;
    color: var(--colors-primary800);
  }

  .c-oUmPa-fboUUB-cv:not(:disabled):hover,
  .c-oUmPa-fboUUB-cv:not(:disabled):focus {
    color: var(--colors-primary900);
  }

  .c-oUmPa-fboUUB-cv:not(:disabled):active {
    color: var(--colors-primary1000);
  }
}

@media  {
  .c-euKflc-iwWtoZ-css {
    border-right: none;
    border-top-right-radius: 0px;
    border-bottom-right-radius: 0px;
  }

  .c-dhzjXW-ibwGleD-css {
    border-radius: 0px;
    width: var(--sizes-6);
  }

  .c-dhzjXW-ibwGleD-css:disabled {
    opacity: 0.3;
    pointer-events: none;
  }

  .c-euKflc-ihgsOSq-css {
    border-left: none;
    border-top-left-radius: 0px;
    border-bottom-left-radius: 0px;
  }
}

<div>
  <div
    class="c-dhzjXW"
  >
    <span
      class="c-jVLVTy c-PJLV"
      data-state="closed"
      tabindex="-1"
    >
      <button
        aria-label="decrement"
        class="c-oUmPa c-oUmPa-PrXKS-size-md c-oUmPa-fboUUB-cv c-euKflc c-euKflc-iwWtoZ-css"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="c-hMRxhp c-hMRxhp-dMrjnF-size-md c-hMRxhp-iPJLV-css"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 12H4"
          />
        </svg>
      </button>
    </span>
    <div
      class="c-dhzjXW c-kOvGWL c-kOvGWL-hSbHZR-size-lg c-dhzjXW-ibwGleD-css"
    >
      <input
        aria-label="test"
        aria-valuemax="9007199254740991"
        aria-valuemin="0"
        aria-valuenow="0"
        class="c-ctivzP c-ctivzP-gvmVBy-size-md c-ctivzP-eMzMJc-weight-normal c-ctivzP-cyRcZm-family-body c-foJWJd"
        inputmode="numeric"
        name="test"
        pattern="[0-9]*"
        role="spinbutton"
        type="text"
        value="0"
      />
    </div>
    <span
      class="c-jVLVTy c-PJLV"
      data-state="closed"
      tabindex="-1"
    >
      <button
        aria-label="increment"
        class="c-oUmPa c-oUmPa-PrXKS-size-md c-oUmPa-fboUUB-cv c-euKflc c-euKflc-ihgsOSq-css"
        tabindex="-1"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="c-hMRxhp c-hMRxhp-dMrjnF-size-md c-hMRxhp-iPJLV-css"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 12H4m8-8v16"
          />
        </svg>
      </button>
    </span>
  </div>
</div>
`;

exports[`NumberInput component renders number input  1`] = `
@media  {
  .c-dhzjXW {
    display: flex;
  }

  .c-jVLVTy {
    z-index: 1;
  }

  .c-oUmPa {
    align-items: center;
    -webkit-appearance: none;
    appearance: none;
    background: white;
    border: unset;
    border-radius: var(--radii-0);
    box-sizing: border-box;
    cursor: pointer;
    display: flex;
    flex-shrink: 0;
    justify-content: center;
    padding: unset;
    transition: all 100ms ease-out;
  }

  .c-oUmPa[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-hMRxhp {
    display: inline-block;
    fill: none;
    flex-shrink: 0;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    vertical-align: middle;
  }

  .c-euKflc {
    border-color: var(--colors-grey800) !important;
    z-index: 1;
    height: 100% !important;
  }

  .c-euKflc:hover {
    background: var(--colors-grey100);
  }

  .c-euKflc:hover svg {
    color: var(--colors-grey800);
  }

  .c-euKflc svg {
    color: var(--colors-grey700);
  }

  .c-euKflc:active {
    background: var(--colors-grey200);
  }

  .c-euKflc:active svg {
    color: var(--colors-grey900);
  }

  .c-euKflc:disabled {
    opacity: 0.3;
    pointer-events: none;
  }

  .c-hkdxUu {
    background-color: var(--colors-grey900);
    border-radius: var(--radii-0);
    box-shadow: var(--shadows-0);
    color: white;
    font-family: var(--fonts-body);
    font-size: var(--fontSizes-sm);
    line-height: 1.5;
    white-space: normal;
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    padding-top: var(--space-2);
    padding-bottom: var(--space-2);
    z-index: 10;
  }

@media (prefers-reduced-motion: no-preference) {
    .c-hkdxUu {
      animation-duration: 75ms;
      animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
      will-change: transform, opacity;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hkdxUu[data-state="delayed-open"][data-side="top"] {
      animation-name: k-ftcNPK;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hkdxUu[data-state="delayed-open"][data-side="right"] {
      animation-name: k-hbaHED;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hkdxUu[data-state="delayed-open"][data-side="bottom"] {
      animation-name: k-daNevH;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hkdxUu[data-state="delayed-open"][data-side="left"] {
      animation-name: k-fvyGIa;
    }
}

  .c-kOvGWL {
    background: white;
    color: var(--colors-grey1000);
    border: 1px solid var(--colors-grey800);
    border-radius: var(--radii-0);
    transition: background 100ms ease-out, borderColor 100ms ease-out;
    width: 100%;
  }

  .c-kOvGWL:focus-within {
    border-color: var(--colors-blue800);
  }

  .c-ctivzP {
    margin: 0;
  }

  .c-ctivzP > .c-ctivzP:before,
  .c-ctivzP > .c-ctivzP:after {
    display: none;
  }

  .c-foJWJd {
    -webkit-appearance: none;
    appearance: none;
    border: none;
    background: none;
    background-image: none;
    background-color: transparent;
    box-shadow: none;
    box-sizing: border-box;
  }

  .c-foJWJd:focus {
    outline: none;
  }

  .c-foJWJd {
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    height: 100%;
    width: 100%;
  }
}

@media  {
  .c-oUmPa-PrXKS-size-md {
    height: var(--sizes-4);
    width: var(--sizes-4);
  }

  .c-hMRxhp-dMrjnF-size-md {
    height: var(--sizes-2);
    width: var(--sizes-2);
    stroke-width: 1.75;
  }

  .c-hkdxUu-gWQnqe-size-md {
    max-width: 250px;
  }

  .c-kOvGWL-dNqCDY-size-md {
    height: var(--sizes-4);
  }

  .c-ctivzP-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-ctivzP-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-ctivzP-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-ctivzP-eMzMJc-weight-normal {
    font-weight: 400;
  }

  .c-ctivzP-cyRcZm-family-body {
    font-family: var(--fonts-body);
  }
}

@media  {
  .c-oUmPa-fboUUB-cv {
    border: 1px solid;
    border-color: currentColor;
    color: var(--colors-primary800);
  }

  .c-oUmPa-fboUUB-cv:not(:disabled):hover,
  .c-oUmPa-fboUUB-cv:not(:disabled):focus {
    color: var(--colors-primary900);
  }

  .c-oUmPa-fboUUB-cv:not(:disabled):active {
    color: var(--colors-primary1000);
  }
}

@media  {
  .c-euKflc-iwWtoZ-css {
    border-right: none;
    border-top-right-radius: 0px;
    border-bottom-right-radius: 0px;
  }

  .c-dhzjXW-ibwGleD-css {
    border-radius: 0px;
    width: var(--sizes-6);
  }

  .c-dhzjXW-ibwGleD-css:disabled {
    opacity: 0.3;
    pointer-events: none;
  }

  .c-euKflc-ihgsOSq-css {
    border-left: none;
    border-top-left-radius: 0px;
    border-bottom-left-radius: 0px;
  }
}

<div>
  <div
    class="c-dhzjXW"
  >
    <span
      class="c-jVLVTy c-PJLV"
      data-state="closed"
      tabindex="-1"
    >
      <button
        aria-label="decrement"
        class="c-oUmPa c-oUmPa-PrXKS-size-md c-oUmPa-fboUUB-cv c-euKflc c-euKflc-iwWtoZ-css"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="c-hMRxhp c-hMRxhp-dMrjnF-size-md c-hMRxhp-iPJLV-css"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 12H4"
          />
        </svg>
      </button>
    </span>
    <div
      class="c-dhzjXW c-kOvGWL c-kOvGWL-dNqCDY-size-md c-dhzjXW-ibwGleD-css"
    >
      <input
        aria-label="test"
        aria-valuemax="9007199254740991"
        aria-valuemin="0"
        aria-valuenow="0"
        class="c-ctivzP c-ctivzP-gvmVBy-size-md c-ctivzP-eMzMJc-weight-normal c-ctivzP-cyRcZm-family-body c-foJWJd"
        inputmode="numeric"
        name="test"
        pattern="[0-9]*"
        role="spinbutton"
        type="text"
        value="0"
      />
    </div>
    <span
      class="c-jVLVTy c-PJLV"
      data-state="closed"
      tabindex="-1"
    >
      <button
        aria-label="increment"
        class="c-oUmPa c-oUmPa-PrXKS-size-md c-oUmPa-fboUUB-cv c-euKflc c-euKflc-ihgsOSq-css"
        tabindex="-1"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="c-hMRxhp c-hMRxhp-dMrjnF-size-md c-hMRxhp-iPJLV-css"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 12H4m8-8v16"
          />
        </svg>
      </button>
    </span>
  </div>
</div>
`;
